--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/Hostling/js-advanced-diploma#readme",
   "dependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.8.0",
     "@babel/preset-env": "^7.7.7",
+    "@babel/runtime": "^7.8.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.3",
