--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Вы неплохо овладели не только продвинутыми возможностями JS, но и инфраструктурными инструментами. И вам поручили первый проект: разработать небольшую пошаговую игру.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack-dev-server --mode development",
     "lint": "eslint .",
     "build": "webpack --mode production"
@@ -29,6 +29,7 @@
     "core-js": "^3.6.3",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
